--- a/WebContent/showPerson.xhtml
+++ b/WebContent/showPerson.xhtml
@@ -1,29 +1,54 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
+
 
 <ui:composition template="/template/mylayout.xhtml">
-    <ui:define name="content">
-        <f:view>
-            <c:set var="p" value="#{person.person}" />
-            <div class="jumbotron">
-                <h1>Nom: #{p.name}</h1>
-                <h1>Prenom: #{p.firstname}</h1>
-                <p>Id: #{p.id}</p>
-                <p>Email: #{p.email}</p>
-                <p>SiteWeb: #{p.webSite}</p>
-                <p>Nee: #{p.birthDay}</p>
-                <p>
-                    <h:link outcome="accueil" styleClass="btn btn-info">
-                        <span>List of Person</span>
-                    </h:link>
-                </p>
-            </div>
-        </f:view>
-    </ui:define>
+	<ui:define name="content">
+		<f:view>
+			<c:set var="p" value="#{personne.thePerson}" />
+			<div class="jumbotron">
+				<h1>Nom: #{p.name}</h1>
+				<h1>Prenom: #{p.firstName}</h1>
+				<p>Id: #{p.id}</p>
+				<p>Email: #{p.email}</p>
+				<p>SiteWeb: #{p.webSite}</p>
+				<p>Nee: #{p.birthDay}</p>
+				<p>
+					<h:link outcome="accueil" styleClass="btn btn-info">
+						<span>List of Person</span>
+					</h:link>
+				</p>
+
+			</div>
+			<h1>List of Activity</h1>
+			<table class="table">
+			 <tr>
+                        <th>Id</th>
+                        <th>Title</th>
+                        <th>Nature</th>
+                        <th>Description</th>
+                    </tr>
+			<ui:repeat var="a" varStatus="s" value="#{p.activities}">
+				<tr>
+					
+					<td>#{a.idActivity}</td>
+					<td>#{a.title}</td>
+					<td>#{a.nature}</td>
+					<td>#{a.description}</td>
+					
+				</tr>
+			</ui:repeat>
+</table>
+		</f:view>
+
+	</ui:define>
 </ui:composition>
 
 </html>
