--- a/WebContent/addActivity.xhtml
+++ b/WebContent/addActivity.xhtml
@@ -28,23 +28,30 @@
 						styleClass="form-control" />
 					<h:message styleClass="label label-danger" for="description" />
 				</div>
-				<div class="form-group col-md-4">
-					<label for="nature">Nature:</label> 
-					<select id="inputState" class="form-control" required="true" >
-						<option value="FORMATIONS">Formations</option>
-						<option value="PROJET">Projet</option>
-						<option value="EXPERIENCES_PROFESSIONNELLES">Experience Professionelles</option>
-						<option value="AUTRES">Autres</option>
-					</select>
+
+				<!-- 				<div class="form-group col-md-4"> -->
+				<!-- 					<label for="nature">Nature:</label>  -->
+				<!-- 					<select id="inputState" class="form-control" required="true" > -->
+				<!-- 						<option value="#{a.nature}=FORMATIONS">Formations</option> -->
+				<!-- 						<option value="PROJET">Projet</option> -->
+				<!-- 						<option value="EXPERIENCES_PROFESSIONNELLES">Experience Professionelles</option> -->
+				<!-- 						<option value="AUTRES">Autres</option> -->
+				<!-- 					</select> -->
+				<!-- 				</div> -->
+				<div class="form-group">
+					<label for="nature">Nature(FORMATIONS,PROJET,EXPERIENCES,AUTRES):</label>
+					<h:inputText id="nature" value="#{a.nature}"
+						styleClass="form-control" />
+					<h:message styleClass="label label-danger" for="nature" />
 				</div>
-				
 				<div class="form-group">
 					<label for="name">Adresse Web:</label>
 					<h:inputText id="web" value="#{a.webAddress}"
-						styleClass="form-control" validatorMessage="Site web n'est pas valide">
+						styleClass="form-control"
+						validatorMessage="Site web n'est pas valide">
 						<f:validateRegex
-							pattern="^(http:\/\/|https:\/\/)?(www.)?([a-zA-Z0-9]+).[a-zA-Z0-9]*.[a-z]{3}.?([a-z]+)?$"/>
-						</h:inputText>
+							pattern="^(http:\/\/|https:\/\/)?(www.)?([a-zA-Z0-9]+).[a-zA-Z0-9]*.[a-z]{3}.?([a-z]+)?$" />
+					</h:inputText>
 					<h:message styleClass="label label-danger" for="web" />
 				</div>
 				<div class="form-group">
@@ -56,7 +63,7 @@
 				</div>
 				<div class="form-group">
 					<h:commandButton action="#{personne.ajouter()}"
-						styleClass="btn btn-primary" value="Save" />
+						styleClass="btn btn-primary" value="Save" ajax="false"/>
 					<span> </span>
 					<h:link styleClass="btn btn-info" outcome="showPerson" value="Quit" />
 				</div>
