--- a/WebContent/modifyActivity.xhtml
+++ b/WebContent/modifyActivity.xhtml
@@ -17,12 +17,14 @@
 					<th>Nature</th>
 					<th>Title</th>
 					<th>Description</th>
+					<th>Web</th>
 				</tr>
 				<tr>
 						<td>#{a.year}</td>
 						<td>#{a.nature}</td>
 						<td>#{a.title}</td>
 						<td>#{a.description}</td>
+						<td>#{a.webAddress}</td>
 						</tr>
 			</table>
 			<h1>Activity form</h1>
@@ -32,7 +34,7 @@
 					<h:inputText id="title" value="#{a.title}"
 						styleClass="form-control" required="true"
 						requiredMessage="Le titre est obligatoire">
-						<f:validateLength minimum="3" maximum="20" />
+						<f:validateLength minimum="3" maximum="50" />
 					</h:inputText>
 					<h:message styleClass="label label-danger" for="titre" />
 				</div>
@@ -59,13 +61,13 @@
 					</h:inputText>
 					<h:message styleClass="label label-danger" for="web" />
 				</div>
-<!-- 				<div class="form-group"> -->
-<!-- 					<label for="date">Year:</label> -->
-<!-- 					<p:calendar id="year" value="#{a.year}" locale="fr" required="true" -->
-<!-- 						navigator="true" pattern="yyyy" /> -->
+				<div class="form-group">
+					<label for="date">Year:</label>
+					<p:calendar id="year" value="#{a.year}" locale="fr" required="true"
+						navigator="true" pattern="dd-MM-yyyy" />
 
-<!-- 					<h:message styleClass="label label-danger" for="year" /> -->
-<!-- 				</div> -->
+					<h:message styleClass="label label-danger" for="year" />
+				</div>
 				<div class="form-group">
 					<h:commandButton action="#{personne.modifyActivity()}"
 						styleClass="btn btn-primary" value="Modify">
