--- a/WebContent/accueil.xhtml
+++ b/WebContent/accueil.xhtml
@@ -16,22 +16,19 @@
 		<ui:define name="content">
 			<f:view>
 
-				<h1>List of person</h1>
-
+				<h1>Liste des personnes</h1>
+					
 				<h:form>
-					<td><p:inputText id="search"
-							value="#{personne.thePerson.name}" /></td>
-
-					<p:commandButton value="Recherche"
-						action="#{personne.showResultSearch()}" ajax="false">
-
-					</p:commandButton>
+				<p align="right">
+						<h:commandButton styleClass="btn btn-success"
+							action="#{personne.newPerson()}" value="Nouvelle personne" />
+					</p>
 					<p:dataTable value="#{personne.personnes}" var="o"
 						styleClass="table table-hover" headerClass="danger"
 						footerClass="danger" rowClasses="success,warning">
 
 						<p:column>
-							<f:facet name="header">Number</f:facet>
+							<f:facet name="header">Identifiant</f:facet>
 							<h:outputText value="#{o.id}" />
 						</p:column>
 						<p:column>
@@ -39,7 +36,7 @@
 							<h:outputText value="#{o.name}" />
 						</p:column>
 						<p:column>
-							<f:facet name="header">Prenom</f:facet>
+							<f:facet name="header">Prénom</f:facet>
 							<h:outputText value="#{o.firstName}" />
 						</p:column>
 						<p:column>
@@ -47,20 +44,17 @@
 							<h:outputText value="#{o.email}" />
 						</p:column>
 						<p:column>
-							<f:facet name="header">Web</f:facet>
+							<f:facet name="header">Site Web</f:facet>
 							<h:outputText value="#{o.webSite}" />
 						</p:column>
 						<p:column>
-							<f:facet name="header">Regarder</f:facet>
-							<h:commandLink value="Show" styleClass="btn btn-primary btn-xs"
+							<f:facet name="header">Afficher</f:facet>
+							<h:commandLink value="Afficher" styleClass="btn btn-primary btn-xs"
 								action="#{personne.show(o.id)}" />
 						</p:column>
 					</p:dataTable>
 
-					<p>
-						<h:commandButton styleClass="btn btn-success"
-							action="#{personne.newPerson()}" value="New Person" />
-					</p>
+					
 				</h:form>
 
 			</f:view>
