--- a/WebContent/modifyActivity.xhtml
+++ b/WebContent/modifyActivity.xhtml
@@ -4,20 +4,21 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/template/mylayout.xhtml">
 	<ui:define name="content">
 		<f:view>
-			<h1>Activity</h1>
+			<h1>Activité</h1>
 			<c:set var="a" value="#{personne.activity}" />
 			<table class="table">
 				<tr>
 
-					<th>Year</th>
+					<th>Date</th>
 					<th>Nature</th>
-					<th>Title</th>
+					<th>Titre</th>
 					<th>Description</th>
-					<th>Web</th>
+					<th>Site Web</th>
 				</tr>
 				<tr>
 					<td> <h:outputText value="#{a.year}" id="ajax1">
@@ -30,7 +31,7 @@
 					<td><h:outputText value="#{a.webAddress}" id="ajax5"/></td>
 				</tr>
 			</table>
-			<h1>Activity form</h1>
+			<h1>Formulaire Activité</h1>
 			<h:form id="test">
 				<div class="form-group">
 					<label for="name">Titre:</label>
@@ -49,9 +50,9 @@
 				</div>
 
 				<div class="form-group">
-					<label for="nature">Nature(FORMATIONS,PROJET,EXPERIENCES,AUTRES):</label>
+					<label for="nature">Nature:</label>
 					<h:inputText id="nature" value="#{a.nature}"
-						styleClass="form-control" />
+						styleClass="form-control" pt:placeholder="FORMATIONS,PROJET,EXPERIENCES,AUTRES"/>
 					<h:message styleClass="label label-danger" for="nature" />
 				</div>
 				<div class="form-group">
@@ -65,19 +66,19 @@
 					<h:message styleClass="label label-danger" for="web" />
 				</div>
 				<div class="form-group">
-					<label for="date">Year:</label>
+					<label for="date">Date:</label>
 					<p:calendar id="year" value="#{a.year}" locale="fr" required="true"
-						navigator="true" pattern="dd-MM-yyyy" />
+						navigator="true" pattern="dd-MM-yyyy" pt:placeholder="dd-mm-yyyy" />
 
 					<h:message styleClass="label label-danger" for="year" />
 				</div>
 				<div class="form-group">
-					<h:commandButton styleClass="btn btn-primary" value="Modify">
+					<h:commandButton styleClass="btn btn-primary" value="Modifier">
 						<f:ajax execute="@all" render="ajax1 ajax2 ajax3 ajax4 ajax5"
 							listener="#{personne.modifyActivity()}" />
 					</h:commandButton>
 					<span> </span>
-					<h:link styleClass="btn btn-info" outcome="showPerson" value="Quit" />
+					<h:link styleClass="btn btn-info" outcome="showPerson" value="Quitter" />
 				</div>
 			</h:form>
 		</f:view>
