--- a/WebContent/search.xhtml
+++ b/WebContent/search.xhtml
@@ -28,7 +28,7 @@
 										footerClass="danger" rowClasses="success,warning">
 
 										<p:column>
-											<f:facet name="header">Number</f:facet>
+											<f:facet name="header">Id</f:facet>
 											<h:outputText value="#{o.id}" />
 										</p:column>
 										<p:column>
@@ -36,7 +36,7 @@
 											<h:outputText value="#{o.name}" />
 										</p:column>
 										<p:column>
-											<f:facet name="header">Prenom</f:facet>
+											<f:facet name="header">Prénom</f:facet>
 											<h:outputText value="#{o.firstName}" />
 										</p:column>
 										<p:column>
@@ -44,12 +44,12 @@
 											<h:outputText value="#{o.email}" />
 										</p:column>
 										<p:column>
-											<f:facet name="header">Web</f:facet>
+											<f:facet name="header">Site Web</f:facet>
 											<h:outputText value="#{o.webSite}" />
 										</p:column>
 										<p:column>
-											<f:facet name="header">Regarder</f:facet>
-											<h:commandLink value="Show"
+											<f:facet name="header">Afficher</f:facet>
+											<h:commandLink value="Afficher"
 												styleClass="btn btn-primary btn-xs"
 												action="#{personne.show(o.id)}" />
 										</p:column>
